RESOLVED FIXED310048
Fall back to slow path for sandbox initialization if we're unable to read the compiled sandbox
https://bugs.webkit.org/show_bug.cgi?id=310048
Summary Fall back to slow path for sandbox initialization if we're unable to read the...
Per Arne Vollan
Reported 2026-03-16 14:00:59 PDT
Fall back to slow path for sandbox initialization if we're unable to read the compiled sandbox.
Attachments
Per Arne Vollan
Comment 1 2026-03-16 14:01:01 PDT
Per Arne Vollan
Comment 2 2026-03-16 14:02:04 PDT
EWS
Comment 3 2026-03-18 06:05:52 PDT
Committed 309475@main (9c37bfe7f237): <https://commits.webkit.org/309475@main> Reviewed commits have been landed. Closing PR #60718 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.