Fall back to slow path for sandbox initialization if we're unable to read the compiled sandbox https://bugs.webkit.org/show_bug.cgi?id=310048 rdar://172433601

Reviewed by Sihui Liu.

* Source/WebKit/Shared/mac/AuxiliaryProcessMac.mm:
(WebKit::applySandbox):

Canonical link: https://commits.webkit.org/309475@main